# libGamesServer

./: CMakeLists.txt  LoginServer.cpp  LoginServer.h  Player.cpp  Player.h  README.md  Server.cpp  Server.h
executable/: GamesServer.cpp  LoginServer.cpp
